# sdmmc

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README_CN.md
.cargo/: config.toml
.github/workflows/: check.yml  deploy.yml  release.yml  test.yml
src/: err.rs  lib.rs
src/emmc/: aux.rs  block.rs  cmd.rs  mod.rs  rockchip.rs
tests/: test.rs
