[package]
name = "sdmmc"
version = "0.1.0"
edition = "2024"
description = "A no_std SD/MMC/eMMC driver library for ARM64 platforms"
authors = ["Zhou Rui <zrufo747@outlook.com>", "Yang Jinquan <YJQ980314@Gmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later OR Apache-2.0 OR MIT"
documentation = "https://docs.rs/sdmmc"
repository = "https://github.com/drivercraft/sdmmc"
keywords = ["sd", "mmc", "emmc", "embedded"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
fdt-parser = "0.4"
aarch64-cpu = "10.0"
smccc = "0.2"
bitflags = "2.9"
arm_pl011 = "0.1"
kspin = "0.1"
log = "0.4"
# bare-test = "0.4.1"
spin = "0.10.0"
dma-api = { version = "0.3", features = ["alloc"] }
paste = "1.0.15"
cfg-if = "1.0"

[features]
default = ["pio"]
dma = []
pio = []

[dev-dependencies]
pcie = "0.2"
bare-test = "0.7"
byte-unit = { version = "5.1.6", default-features = false, features = ["byte"] }
rk3588-clk = "0.1.3"

[build-dependencies]
bare-test-macros = "0.2"

[[test]]
name = "test"
harness = false
